kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-devsecops
  labels:
    app: student-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: student-app
  template:
    metadata:
      labels:
        app: student-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      containers:
      - name: quoterxp
        image: cdemmer04/student-app:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
      imagePullSecrets:
        - name: my-registry-secret
