kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnix-service
spec:
  selector:
    app: student-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5000
    nodePort: 30000
    targetPort: 5000
