kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - studentapp.local
    secretName: studentapp-tls-secret
  rules:
  - host: studentapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ngnix-service
            port:
              number: 5000
